--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,7 +73,7 @@ jobs:
         tag_name: ${{ steps.tag.outputs.release_tag }}
         repository: subdevs/serverbuilds
         token: ${{ secrets.DEPLOY_TOKEN }}
-        draft: false
+        draft: true
         prerelease: false
         generate_release_notes: true
         files: test/rosaserversatellite test/librosaserver.so test/libluajit.so allfiles.zip
