Use different style tags
Signed-off-by: noche <micheal4826@tuta.io>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Build and release
 on:
   push:
     tags:
-      - '*.*.*'
+      - 'noche-v*.*.*'
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
