--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,9 @@ env:
 
 jobs:
   build:
+    permissions:
+      contents: write
+      
     name: Build
     runs-on: ubuntu-latest
 
@@ -69,7 +72,7 @@ jobs:
         echo "::set-output name=release_tag::server_$(date +"%Y.%m.%d_%H-%M")"
 
     - name: Release
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v0.1.7
       with:
         tag_name: ${{ steps.tag.outputs.release_tag }}
         repository: subdevs/serverbuilds
