--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    # The branches below must be a subset of the branches above
     branches: [ main ]
   schedule:
     - cron: '37 17 * * 6'
@@ -24,7 +23,7 @@ jobs:
 
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         submodules: recursive
 
@@ -38,7 +37,22 @@ jobs:
         # Prefix the list here with "+" to use these queries and those in the config file.
         # queries: ./path/to/local/query, your-org/your-repo/queries@main
 
-    - name: Build moonjit
+    - name: Set up GCC
+      uses: egor-tensin/setup-gcc@v1
+      with:
+        version: latest
+        platform: x64
+
+    - name: Build libopus
+      shell: bash
+      working-directory: ${{github.workspace}}/opus
+      run: |
+        ./autogen.sh
+        ./configure
+        make -j12
+        sudo make install
+
+    - name: Build MoonJIT
       shell: bash
       working-directory: ${{github.workspace}}/moonjit/src
       run: sudo make XCFLAGS+=-DLUAJIT_ENABLE_LUA52COMPAT
@@ -46,15 +60,9 @@ jobs:
     - name: Create Build Environment
       run: cmake -E make_directory ${{github.workspace}}/release
 
-    - name: Install Opus
-      run: sudo apt-get install libopus-dev -y
-
     - name: Configure CMake
       shell: bash
       working-directory: ${{github.workspace}}/release
-      env:
-        CXX: g++-10
-        CC: gcc-10
       run: cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE
 
     - name: Build
