--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,9 @@ name: Build and release
 on:
   workflow_dispatch:
   push:
-    tags:
-      - noche-v*.*.*
+    branches: [ main ]
+      tags:
+        - noche-v*.*.*
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
