--- a/RosaServer/CMakeLists.txt
+++ b/RosaServer/CMakeLists.txt
@@ -3,6 +3,7 @@
 add_compile_definitions (
 	SUBHOOK_SEPARATE_SOURCE_FILES
 	SUBHOOK_IMPLEMENTATION
+	SOL_ALL_SAFETIES_ON
 )
 
 set(CMAKE_CXX_FLAGS, "${CMAKE_CXX_FLAGS} -WAll -Wfatal-errors -Wl --no-undefined")
