--- a/RosaServer/CMakeLists.txt
+++ b/RosaServer/CMakeLists.txt
@@ -4,6 +4,7 @@ add_compile_definitions (
 	SUBHOOK_SEPARATE_SOURCE_FILES
 	SUBHOOK_IMPLEMENTATION
 	SOL_ALL_SAFETIES_ON
+	SOL_EXCEPTIONS_SAFE_PROPAGATION
 )
 
 set(CMAKE_CXX_FLAGS, "${CMAKE_CXX_FLAGS} -WAll -Wfatal-errors -Wl --no-undefined")
