change this back [skip ci]

--- a/RosaServer/CMakeLists.txt
+++ b/RosaServer/CMakeLists.txt
@@ -3,7 +3,7 @@
 add_compile_definitions (
 	SUBHOOK_SEPARATE_SOURCE_FILES
 	SUBHOOK_IMPLEMENTATION
-	SOL_ALL_SAFETIES_ON=1
+	SOL_ALL_SAFETIES_ON
 	SOL_EXCEPTIONS_SAFE_PROPAGATION
 )
 
