--- a/.gitmodules
+++ b/.gitmodules
@@ -17,6 +17,7 @@
 [submodule "opus"]
 	path = opus
 	url = https://github.com/xiph/opus
+	branch = main
 [submodule "miniz"]
 	path = miniz
 	url = https://github.com/richgel999/miniz
