--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,12 +41,12 @@ jobs:
     - name: Configure CMake
       shell: bash
       working-directory: ${{github.workspace}}/release
-      run: cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE -j 4
+      run: cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE
 
     - name: Build
       working-directory: ${{github.workspace}}/release
       shell: bash
-      run: cmake -DCMAKE_CXX_FLAGS_ALL_WARNINGS:STRING="-fsanitize=address" --build . --config $BUILD_TYPE
+      run: cmake -DCMAKE_CXX_FLAGS_ALL_WARNINGS:STRING="-fsanitize=address" --build . --config $BUILD_TYPE -j 4
 
     - name: Test
       working-directory: ${{github.workspace}}/test
