zlib -> lz4 [skip ci]

--- a/RosaServer/CMakeLists.txt
+++ b/RosaServer/CMakeLists.txt
@@ -20,6 +20,7 @@ find_package (OpenSSL REQUIRED)
 if(NOT CMAKE_CROSSCOMPILING)
   find_package(PkgConfig QUIET)
   pkg_check_modules(PC_OPUS opus)
+  pkg_check_modules(LZ4 liblz4)
 endif()
 
 find_library(OPUS_LIBRARY
@@ -36,10 +37,34 @@ find_path(OPUS_INCLUDEDIR opus.h
   ${CROSSCOMPILING_NO_CMAKE_SYSTEM_PATH}
 )
 
+if(NOT LZ4_FOUND)
+    find_path(LZ4_INCLUDE_DIRS lz4.h
+      HINTS "${LZ4_ROOT}" "$ENV{LZ4_ROOT}"
+      PATHS "$ENV{PROGRAMFILES}/lz4" "$ENV{PROGRAMW6432}/lz4"
+      PATH_SUFFIXES include)
+
+    find_library(LZ4_LIBRARY
+      NAMES lz4 lz4_static
+      HINTS "${LZ4_ROOT}" "$ENV{LZ4_ROOT}"
+      PATHS "$ENV{PROGRAMFILES}/lz4" "$ENV{PROGRAMW6432}/lz4"
+      PATH_SUFFIXES lib)
+
+    if(LZ4_LIBRARY)
+        set(LZ4_LIBRARIES ${LZ4_LIBRARY})
+        get_filename_component(LZ4_LIBRARY_DIRS ${LZ4_LIBRARY} DIRECTORY)
+    endif()
+else()
+    find_library(LZ4_LIBRARY
+        NAMES lz4 lz4_static
+        PATHS ${LZ4_LIBRARY_DIRS}
+        NO_DEFAULT_PATH)
+endif()
+
 include(FindPackageHandleStandardArgs)
 find_package_handle_standard_args(Opus DEFAULT_MSG OPUS_INCLUDEDIR)
 
 mark_as_advanced(OPUS_INCLUDEDIR OPUS_LIBRARY)
+mark_as_advanced(LZ4_LIBRARY LZ4_INCLUDE_DIRS LZ4_LIBRARY_DIRS LZ4_LIBRARIES)
 
 if(OPUS_FOUND)
   set(OPUS_INCLUDE_DIRS ${OPUS_INCLUDEDIR})
@@ -66,13 +91,10 @@ add_library (rosaserver SHARED
 	tcpserver.cpp
 	tcpclient.cpp
 	worker.cpp
-	zlib.cpp
+	lz4impl.cpp
 	../subhook/subhook.c
 	../subhook/subhook_unix.c
 	../subhook/subhook_x86.c
-	../miniz/miniz.c
-	../miniz/miniz_tinfl.c
-	../miniz/miniz_tdef.c
 )
 
 set_property (TARGET rosaserver PROPERTY CXX_STANDARD 20)
@@ -84,10 +106,11 @@ target_link_libraries (rosaserver OpenSSL::Crypto)
 target_link_libraries (rosaserver ${OPUS_LIBRARY})
 target_link_libraries (rosaserver sqlite3)
 target_link_libraries (rosaserver ${CMAKE_SOURCE_DIR}/moonjit/src/libluajit.so)
-include_directories (${CMAKE_SOURCE_DIR}/moonjit/src)
-include_directories (${CMAKE_SOURCE_DIR}/stb)
-include_directories (${OPUS_INCLUDEDIR})
-include_directories (${CMAKE_SOURCE_DIR}/shared)
-include_directories (${CMAKE_SOURCE_DIR}/sol2/include)
-include_directories (${CMAKE_SOURCE_DIR}/subhook)
-include_directories (${CMAKE_SOURCE_DIR}/miniz)
+target_link_libraries (rosaserver ${LZ4_LIBRARY})
+target_include_directories (rosaserver PUBLIC ${CMAKE_SOURCE_DIR}/moonjit/src)
+target_include_directories (rosaserver PUBLIC ${CMAKE_SOURCE_DIR}/stb)
+target_include_directories (rosaserver PUBLIC ${OPUS_INCLUDEDIR})
+target_include_directories (rosaserver PUBLIC ${CMAKE_SOURCE_DIR}/shared)
+target_include_directories (rosaserver PUBLIC ${CMAKE_SOURCE_DIR}/sol2/include)
+target_include_directories (rosaserver PUBLIC ${CMAKE_SOURCE_DIR}/subhook)
+target_include_directories (rosaserver PUBLIC ${LZ4_INCLUDE_DIRS})
