--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,14 +21,11 @@ jobs:
       with:
         submodules: recursive
 
-    - name: Set up GCC
-      uses: egor-tensin/setup-gcc@v1
-      with:
-        version: 10
-        platform: x64
-
     - name: Pull Packages
-      run: sudo apt-get install build-essential cmake libssl-dev libsqlite3-dev libopus-dev
+      run: |
+        sudo add-apt-repository ppa:ubuntu-toolchain-r/test
+        sudo apt-get update
+        sudo apt-get install dpkg-dev libc-dev make cmake libssl-dev libsqlite3-dev libopus-dev gcc-13 g++-13
 
     - name: Build MoonJIT
       shell: bash
