--- a/.github/workflows/release-clang.yml
+++ b/.github/workflows/release-clang.yml
@@ -27,7 +27,7 @@ jobs:
         version: "17"
 
     - name: Pull Packages
-      run: sudo apt-get install build-essential cmake libssl-dev libsqlite3-dev libopus-dev
+      run: sudo apt-get install build-essential cmake liblz4-dev libssl-dev libsqlite3-dev libopus-dev
 
     - name: Build MoonJIT
       shell: bash
