--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,9 +23,10 @@ jobs:
 
     - name: Pull Packages
       run: |
+        sudo apt-get remove gcc g++
         sudo add-apt-repository ppa:ubuntu-toolchain-r/test
         sudo apt-get update
-        sudo apt-get install dpkg-dev libc-dev make cmake libssl-dev libsqlite3-dev libopus-dev gcc-13 g++-13
+        sudo apt-get install dpkg-dev libc-dev make cmake liblz4-dev libssl-dev libsqlite3-dev libopus-dev gcc-13 g++-13
 
     - name: Build MoonJIT
       shell: bash
