--- a/.github/workflows/release-clang.yml
+++ b/.github/workflows/release-clang.yml
@@ -22,9 +22,7 @@ jobs:
         submodules: recursive
 
     - name: Install LLVM and Clang
-      uses: KyleMayes/install-llvm-action@v1
-      with:
-        version: "17"
+      run: bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)"
 
     - name: Pull Packages
       run: sudo apt-get install build-essential cmake liblz4-dev libssl-dev libsqlite3-dev libopus-dev
@@ -52,7 +50,7 @@ jobs:
       shell: bash
       run: |
         mkdir stage
-        mv release/RosaServerSatellite/rosaserversatellite stage/rosaserversatelite
+        mv release/RosaServerSatellite/rosaserversatellite stage/rosaserversatellite
         mv release/RosaServer/librosaserver.so stage/librosaserver.so
         mv moonjit/src/libluajit.so stage/libluajit.so
 
