--- a/.github/workflows/release-clang.yml
+++ b/.github/workflows/release-clang.yml
@@ -24,8 +24,12 @@ jobs:
     - name: Install LLVM and Clang
       run: |
         sudo bash -c "$(wget -O - https://apt.llvm.org/llvm.sh)"
-        sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-18 100 --slave /usr/bin/clang++ clang++ /usr/bin/clang++-18 --slave /usr/bin/lld lld /usr/bin/lld-18 --slave /usr/bin/llc llc /usr/bin/llc-18
+        sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-18 100
+        sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-18 100
+        sudo update-alternatives --install /usr/bin/cc cc /usr/bin/clang-18 100
+        sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/clang++-18 100
         sudo update-alternatives --set clang /usr/bin/clang-18
+        sudo update-alternatives --set clang++ /usr/bin/clang-18++
 
     - name: Pull Packages
       run: sudo apt-get install build-essential cmake liblz4-dev libssl-dev libsqlite3-dev libopus-dev
