--- a/.github/workflows/release-clang.yml
+++ b/.github/workflows/release-clang.yml
@@ -11,8 +11,8 @@ env:
   BUILD_TYPE: Release
 
 jobs:
-  build:
-    name: Build
+  build-clang:
+    name: Build (clang)
     runs-on: ubuntu-latest
 
     steps:
