--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,8 @@ on:
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: RelWithDebInfo
+  # Debug is used for ASAN/testing builds to avoid disabling assertions
+  BUILD_TYPE: Debug
 
 jobs:
   test:
