--- a/.github/workflows/release-clang.yml
+++ b/.github/workflows/release-clang.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Configure CMake
       shell: bash
       working-directory: ${{github.workspace}}/release
-      run: cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+      run: cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_CXX_FLAGS:STRING="-fuse-ld=lld"
 
     - name: Build
       working-directory: ${{github.workspace}}/release
