--- a/.github/workflows/test-clang.yml
+++ b/.github/workflows/test-clang.yml
@@ -37,6 +37,9 @@ jobs:
     - name: Pull Packages
       run: sudo apt-get install build-essential cmake liblz4-dev libssl-dev libsqlite3-dev libopus-dev
 
+    - uses: lukka/get-cmake@latest
+    - uses: rui314/setup-mold@v1
+
     - name: Build MoonJIT
       shell: bash
       working-directory: ${{github.workspace}}/moonjit/src
@@ -48,7 +51,7 @@ jobs:
     - name: Configure CMake
       shell: bash
       working-directory: ${{github.workspace}}/release
-      run: cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_CXX_FLAGS:STRING="-fsanitize=address -fuse-ld=lld" -DCMAKE_C_FLAGS:STRING="-fsanitize=address -fuse-ld=lld" -DCMAKE_SHARED_LINKER_FLAGS:STRING="-fsanitize=address"
+      run: cmake .. -G "Ninja" -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_LINKER_TYPE=MOLD -DCMAKE_CXX_FLAGS:STRING="-fsanitize=address" -DCMAKE_C_FLAGS:STRING="-fsanitize=address"
 
     - name: Build
       working-directory: ${{github.workspace}}/release
