--- a/.github/workflows/release-clang.yml
+++ b/.github/workflows/release-clang.yml
@@ -36,8 +36,11 @@ jobs:
     - name: Pull Packages
       run: sudo apt-get install build-essential cmake liblz4-dev libssl-dev libsqlite3-dev libopus-dev
 
-    - uses: lukka/get-cmake@latest
-    - uses: rui314/setup-mold@v1
+    - name: Get CMake and Ninja
+      uses: lukka/get-cmake@latest
+
+    - name: Get mold
+      uses: rui314/setup-mold@v1
 
     - name: Build MoonJIT
       shell: bash
