--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         submodules: recursive
 
@@ -30,8 +30,11 @@ jobs:
         sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-13 100 --slave /usr/bin/g++ g++ /usr/bin/g++-13 --slave /usr/bin/gcov gcov /usr/bin/gcov-13
         sudo update-alternatives --set gcc /usr/bin/gcc-13
 
-    - uses: lukka/get-cmake@latest
-    - uses: rui314/setup-mold@v1
+    - name: Get CMake and Ninja
+      uses: lukka/get-cmake@latest
+
+    - name: Get mold
+      uses: rui314/setup-mold@v1
 
     - name: Build MoonJIT
       shell: bash
