--- a/.github/workflows/test-clang.yml
+++ b/.github/workflows/test-clang.yml
@@ -54,7 +54,9 @@ jobs:
     - name: Configure CMake
       shell: bash
       working-directory: ${{github.workspace}}/release
-      run: cmake .. -G "Ninja" -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_LINKER_TYPE=MOLD -DCMAKE_CXX_FLAGS:STRING="-fsanitize=address -shared-libasan" -DCMAKE_C_FLAGS:STRING="-fsanitize=address -shared-libasan"
+      run: |
+        export LLVM_RSC_DIR="$(clang -print-resource-dir)"
+        cmake .. -G "Ninja" -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_LINKER_TYPE=MOLD -DCMAKE_BUILD_RPATH="$LLVM_RSC_DIR/lib/linux" -DCMAKE_CXX_FLAGS:STRING="-fsanitize=address -shared-libasan" -DCMAKE_C_FLAGS:STRING="-fsanitize=address -shared-libasan"
 
     - name: Build
       working-directory: ${{github.workspace}}/release
