--- a/.github/workflows/test-clang.yml
+++ b/.github/workflows/test-clang.yml
@@ -1,4 +1,4 @@
-name: Build (clang)
+name: Test (clang)
 on:
   workflow_dispatch:
   push:
@@ -8,11 +8,12 @@ on:
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: Release
+  # Debug is used for ASAN/testing builds to avoid disabling assertions
+  BUILD_TYPE: Debug
 
 jobs:
-  build-clang:
-    name: Build (clang)
+  test-clang:
+    name: Test (clang)
     runs-on: ubuntu-24.04
 
     steps:
@@ -53,27 +54,16 @@ jobs:
     - name: Configure CMake
       shell: bash
       working-directory: ${{github.workspace}}/release
-      run: cmake .. -G "Ninja" -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_LINKER_TYPE=MOLD
+      run: |
+        export LLVM_RSC_DIR="$(clang -print-resource-dir)"
+        cmake .. -G "Ninja" -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_LINKER_TYPE=MOLD -DCMAKE_BUILD_RPATH="$LLVM_RSC_DIR/lib/linux" -DCMAKE_CXX_FLAGS:STRING="-fsanitize=address -shared-libasan" -DCMAKE_C_FLAGS:STRING="-fsanitize=address -shared-libasan"
 
     - name: Build
       working-directory: ${{github.workspace}}/release
       shell: bash
       run: cmake --build . --config $BUILD_TYPE --parallel 4
 
-    - name: Stage files
-      working-directory: ${{github.workspace}}
+    - name: Test
+      working-directory: ${{github.workspace}}/test
       shell: bash
-      run: |
-        mkdir stage
-        mv release/RosaServerSatellite/rosaserversatellite stage/rosaserversatellite
-        mv release/RosaServer/librosaserver.so stage/librosaserver.so
-        mv moonjit/src/libluajit.so stage/libluajit.so
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: Build
-        path: |
-            stage/rosaserversatellite
-            stage/librosaserver.so
-            stage/libluajit.so
+      run: ./test-clang
