--- a/.github/workflows/release-clang.yml
+++ b/.github/workflows/release-clang.yml
@@ -72,7 +72,7 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
-        name: Build
+        name: Build (clang)
         path: |
             stage/rosaserversatellite
             stage/librosaserver.so
