--- a/.gitmodules
+++ b/.gitmodules
@@ -13,7 +13,7 @@
 	url = https://github.com/nothings/stb
 [submodule "subhook"]
 	path = subhook
-	url = https://github.com/Zeex/subhook
+	url = https://github.com/savushkin-r-d/subhook
 [submodule "opus"]
 	path = opus
 	url = https://github.com/xiph/opus
