Update sol2, ensure luajit used by sol2, remove redundant exception handler

--- a/RosaServer/CMakeLists.txt
+++ b/RosaServer/CMakeLists.txt
@@ -6,6 +6,7 @@ add_compile_definitions (
 	SOL_ALL_SAFETIES_ON
 	SOL_EXCEPTIONS_SAFE_PROPAGATION
 	SOL_SAFE_FUNCTION
+	SOL_LUAJIT
 )
 
 execute_process (
