updated toolchain, fix the glibc 2.38 deadlock

--- a/.github/workflows/release-clang.yml
+++ b/.github/workflows/release-clang.yml
@@ -13,7 +13,7 @@ env:
 jobs:
   build-clang:
     name: Build (clang)
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repository
